[gd_scene load_steps=4 format=3 uid="uid://bsboa856u3ioq"]

[ext_resource type="Script" uid="uid://b2py06oqxmpi" path="res://brick.gd" id="1_awxk8"]
[ext_resource type="AudioStream" uid="uid://dx33m8qlrrpdx" path="res://Resources/hit_brick.ogg" id="2_5p85m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nkspu"]
height = 60.0

[node name="Brick" type="Node2D"]
script = ExtResource("1_awxk8")
metadata/_custom_type_script = "uid://b2py06oqxmpi"

[node name="BrickBody" type="StaticBody2D" parent="."]
collision_layer = 8

[node name="ColorRect" type="ColorRect" parent="BrickBody"]
offset_left = -30.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 10.0
color = Color(0.145098, 0.372549, 0.521569, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BrickBody"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nkspu")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_5p85m")
bus = &"Effects"

[connection signal="finished" from="HitSound" to="." method="_on_hit_sound_finished"]
